# deadcolors

./: README.md  pyproject.toml
deadcolors/: __main__.py
examples/: ascii.txt
