[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deadcolors"
version = "0.1.0"
description = "Custom pokemon-colorscripts-style ASCII cycler for terminal rice"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
deadcolors = "deadcolors.__main__:main"

[tool.setuptools]
packages = ["deadcolors"]
